typewriter-test/tests/snapshots/typescript_tests__tagged_enum_zod_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.3.0. DO NOT EDIT.
// Source: PaymentStatus
// Regenerate: cargo typewriter generate

import { z } from 'zod';

/**
 * Payment processing status
 */
export const PaymentStatusSchema = z.discriminatedUnion("type", [z.object({"type": z.literal("pending")}), z.object({"type": z.literal("completed"), "transaction_id": z.string()}), z.object({"type": z.literal("failed"), "reason": z.string(), "code": z.number()})]);
