typewriter-test/tests/snapshots/typescript_tests__untagged_enum_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.3.1. DO NOT EDIT.
// Source: StringOrNumber
// Regenerate: cargo typewriter generate

export type StringOrNumber =
  | { value: string }
  | { value: number };
