typewriter-test/tests/snapshots/typescript_tests__untagged_enum_zod_snapshot.snap
---
source: typewriter-test/tests/typescript_tests.rs
expression: output
---
// Auto-generated by typewriter v0.3.1. DO NOT EDIT.
// Source: StringOrNumber
// Regenerate: cargo typewriter generate

import { z } from 'zod';

export const StringOrNumberSchema = z.union([z.object({"value": z.string()}), z.object({"value": z.number()})]);
